fix nav-collapse margin + webpage heading

--- a/assets/css/main_theme.css
+++ b/assets/css/main_theme.css
@@ -491,6 +491,12 @@ nav {
   /*gap: 30px!important;*/
 }
 
+@media (max-width: 992px) {
+  .navbar-collapse {
+    margin-right: 0px!important;
+  }
+}
+
 .container, .container-fluid, .container-lg, .container-md, .container-sm, .container-xl, .container-xxl {
   width: 100%;
   padding-right: 0px;
